--- a/mainpage.dox
+++ b/mainpage.dox
@@ -1,28 +1,29 @@
-transform_graph {#mainpage}
-===============================
+/**
+\mainpage
+\htmlinclude manifest.html
 
-transform_graph is a library for computing transformations between coordinate frames. It is similar to the tf library but is more lightweight.
+\b transform_graph is a library for computing transformations between coordinate frames. It is similar to the tf library but is more lightweight.
 
-## Differences from tf
+\section difffromtf Differences from tf
 
 - Coordinate frames do not have to be structured in a tree. Instead, frames can be arranged in an arbitrary graph (weakly connected, cyclic, disconnected).
 - transform_graph does not depend on ROS except to convert from common message types. As a result, you do not need to run a ROS master to use transform_graph and it is suitable for use in pure unit tests.
 - transform_graph is not a distributed system. Programmers simply create and use the transform_graph graph as an object in memory.
 
-## Quick start
+\section quickstart Quick start
 
 transform_graph::Graph maintains the graph of transformations and is the primary interface to transform_graph:
-~~~{.cpp}
+\code
 #include "transform_graph/transform_graph.h"
 
 int main(int argc, char** argv) {
   transform_graph::Graph graph; 
   return 0;
 }
-~~~
+\endcode
 
 Add frames to the graph using transform_graph::Graph::Add:
-~~~{.cpp}
+\code
 transform_graph::Graph graph;
 
 geometry_msgs::Pose torso_pose;
@@ -30,19 +31,19 @@ pose.position.z = 0.4;
 pose.orientation.w = 1;
 
 graph.Add("torso_lift_link", transform_graph::RefFrame("base_link"), torso_pose);
-~~~
+\endcode
 
 Get points in different frames using transform_graph::Graph::DescribePosition.
 In this example, we want to know what a point 10 cm in front of the robot's wrist is, expressed in the base frame:
-~~~{.cpp}
+\code
 geometry_msgs::Point pt;
 pt.x = 0.1;
 transform_graph::Transform pt_in_base;
 graph.DescribePosition(pt, transform_graph::Source("wrist"), transform_graph::Target("base_link"), &pt_in_base);
 Eigen::Vector3d v = pt_in_base.vector();
-~~~
+\endcode
 
-## Types used by transform_graph
+\section types Types used by transform_graph
 
 transform_graph::Transform is the library's representation of a transformation.
 Similarly, transform_graph::Position and transform_graph::Orientation describe positions and orientations.
@@ -54,7 +55,7 @@ Instead, call transform_graph::Position::vector(), transform_graph::Orientation:
 
 Types like transform_graph::Source, transform_graph::RefFrame, transform_graph::From, etc. are wrappers around strings and are intended to help clarify the meaning of function arguments.
 
-## Describing vs. Mapping
+\section descvsmapping Describing vs. Mapping
 transform_graph supports two operations, *describing* and *mapping*, which are different ways of thinking about the same thing.
 
 To *describe* a point is to express the coordinates of the point in a different frame of reference, called the target frame.
@@ -71,13 +72,14 @@ The equivalence is that to map a vector *from* the left *to* the right is the sa
 Most of the time, it's easier to think about the problem as "describing," but it can occasionally be helpful to think about it as "mapping" instead.
 Below is a summary of frame relationships:
 
-Usage | Reference frame | Local frame
------ | --------------- | -----------
-General | transform_graph::RefFrame | transform_graph::LocalFrame
-Description | transform_graph::Target | transform_graph::Source
-Mapping | transform_graph::To | transform_graph::From
+<table>
+  <tr><th>Usage</th><th>Reference frame</th><th>Local frame</th></tr>
+  <tr><td>General</td><td>transform_graph::RefFrame</td><td>transform_graph::LocalFrame</td></tr>
+  <tr><td>Description</td><td>transform_graph::Target</td><td>transform_graph::Source</td></tr>
+  <tr><td>Mapping</td><td>transform_graph::To</td><td>transform_graph::From</td></tr>
+</table>
 
-## ComputeDescription vs. DescribePosition
+\section computevsdescribe ComputeDescription vs. DescribePosition
 Each time you call transform_graph::Graph::DescribePosition or transform_graph::Graph::MapPosition, transform_graph finds a path of transformations between the frames and multiplies the point through the chain from right to left, which leads to fewer multiplications than doing so left to right.
 However, if you are going to transform many points between the same two frames, it will be more efficient to just multiply all of the matrices along the transformation chain once and use the resulting matrix over and over.
 To do so, call transform_graph::Graph::ComputeDescription.
@@ -85,7 +87,7 @@ For convenience, you can always place the result back into the graph.
 transform_graph will always use this transform because it will be the shortest path between the two frames.
 
 For example, suppose we want to transform thousands of points in a point cloud into the wrist frame.
-~~~{.cpp}
+\code
 // Compute the frame describing the Kinect frame relative to the wrist frame.
 transform_graph::Transform cloud_in_wrist;
 graph.ComputeDescription(transform_graph::LocalFrame("head_mount_kinect"), transform_graph::RefFrame("wrist"), &cloud_in_wrist);
@@ -98,9 +100,10 @@ for (size_t i=0; i<cloud.size(); ++i) {
   transform_graph::Position pt_in_wrist;
   graph.DescribePosition(pt, transform_graph::Source("head_mount_kinect"), transform_graph::Target("wrist"), &pt_in_wrist);
 }
-~~~
+\endcode
 
-## Graph details
+\section details Graph details
 - If there are multiple paths between two frames, the shortest one is chosen.
 - You can update a transform by simply adding it again.
 - You do not need to add the inverse of a transform, transform_graph automatically computes them. If you do add the inverse of an existing edge, it will update the edge in the graph.
+*/
